[gd_scene load_steps=3 format=3 uid="uid://dnhod5vem0rvw"]

[ext_resource type="Script" path="res://myy_visual_shader_graph.gd" id="1_cvovr"]
[ext_resource type="PackedScene" uid="uid://38g2kkvm02kl" path="res://myy_visual_shader_graph_node.tscn" id="2_5blh1"]

[node name="GraphEdit" type="GraphEdit"]
size_flags_horizontal = 3
right_disconnects = true
zoom = 1.5
script = ExtResource("1_cvovr")
shader_graph_node = ExtResource("2_5blh1")

[connection signal="connection_request" from="." to="." method="_on_connection_request"]
[connection signal="disconnection_request" from="." to="." method="_on_disconnection_request"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="popup_request" from="." to="." method="_on_popup_request"]
